--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "browser-sync": "browser-sync start --server --files index.html styles.css",
     "sass": "node-sass --source-map-embed styles.scss styles.css",
-    "sass-watch": "node-sass --source-map-embed --watch *.scss --recursive styles.css",
-    "dev": "concurrently npm:sass npm:sass-watch npm:browser-sync",
+    "sass-watch": "node-sass --source-map-embed --watch styles.scss --recursive styles.css",
+    "dev": "concurrently npm:sass-watch npm:browser-sync",
     "lint": "stylelint styles.scss --syntax scss",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
